parser/tests/cases/snapshots/cases__errors__fn_no_args.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(fn_no_args), |par| functions::parse_fn_def(par, None),\n           false, \"def f:\\n  return 5\")"

---
error: function definition requires a list of parameters
  ┌─ fn_no_args:1:5
  │
1 │ def f:
  │     ^ function name must be followed by `(`
  │
  = Note: if the function `f` takes no parameters, use an empty set of parentheses.
  = Example: def f()
  = Note: each parameter must have a name and a type.
  = Example: def f(my_value: u256, x: bool)


